[gd_scene load_steps=5 format=3 uid="uid://c32peshfgdx1c"]

[ext_resource type="Script" path="res://Scripts/LadderController.gd" id="1_eax1v"]
[ext_resource type="Texture2D" uid="uid://clo5b2oqo21xa" path="res://Sprites/Objects/LadderTallLower.png" id="2_qod77"]
[ext_resource type="Texture2D" uid="uid://nlp5cfh2w352" path="res://Sprites/Objects/LadderTallUpper.png" id="3_bjxf1"]
[ext_resource type="Script" path="res://Scripts/LadderWarp.gd" id="5_ve1dv"]

[node name="LadderTall" type="Node2D"]
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_eax1v")

[node name="Lower" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(10, 77)
texture = ExtResource("2_qod77")
offset = Vector2(0, -36)

[node name="Upper" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(10, 41)
texture = ExtResource("3_bjxf1")

[node name="BottomArea" type="Area2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 87)
collision_layer = 32
script = ExtResource("5_ve1dv")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BottomArea"]
position = Vector2(4, -2)
polygon = PackedVector2Array(16, -6, 16, 12, -9, 3, -9, -13)

[node name="TopArea" type="Area2D" parent="."]
y_sort_enabled = true
position = Vector2(15, -6)
collision_layer = 32
script = ExtResource("5_ve1dv")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TopArea"]
position = Vector2(-1, 4)
polygon = PackedVector2Array(10, -1, 10, 16, -16, 5, -16, -12)

[connection signal="bodyStatus" from="BottomArea" to="." method="_update_body_status"]
[connection signal="body_entered" from="BottomArea" to="BottomArea" method="_on_body_entered"]
[connection signal="body_exited" from="BottomArea" to="BottomArea" method="_on_body_exited"]
[connection signal="setPosition" from="BottomArea" to="." method="_set_position"]
[connection signal="bodyStatus" from="TopArea" to="." method="_update_body_status"]
[connection signal="body_entered" from="TopArea" to="TopArea" method="_on_body_entered"]
[connection signal="body_exited" from="TopArea" to="TopArea" method="_on_body_exited"]
[connection signal="setPosition" from="TopArea" to="." method="_set_position"]
